fix small tile on mobile viewport

--- a/src/documents/styles/modules/tiles.css.less
+++ b/src/documents/styles/modules/tiles.css.less
@@ -371,6 +371,9 @@
 					}
 				}
 			}
+			&.small {
+				height: 257px;
+			}
 			&.medium, &.large, &.featured, &.hero {
 				height: @tile-height * 1.6;
 				a.tile-image {
